Based on Java 1.8 and added warnings about use to sign JSON-LD